--- a/app/src/main/res/xml/stock_app_widget_info.xml
+++ b/app/src/main/res/xml/stock_app_widget_info.xml
@@ -6,5 +6,5 @@
     android:minWidth="110dp"
     android:previewImage="@drawable/example_appwidget_preview"
     android:resizeMode="horizontal|vertical"
-    android:updatePeriodMillis="86400000"
+    android:updatePeriodMillis="0"
     android:widgetCategory="home_screen"></appwidget-provider>
