--- a/app/src/main/res/xml/stock_app_widget_info.xml
+++ b/app/src/main/res/xml/stock_app_widget_info.xml
@@ -2,9 +2,10 @@
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
     android:initialKeyguardLayout="@layout/stock_app_widget"
     android:initialLayout="@layout/stock_app_widget"
-    android:minHeight="110dp"
-    android:minWidth="110dp"
+    android:minHeight="@dimen/widget_detail_default_height"
+    android:minResizeWidth="@dimen/widget_detail_min_resize_width"
+    android:minWidth="@dimen/widget_detail_default_width"
     android:previewImage="@drawable/example_appwidget_preview"
     android:resizeMode="horizontal|vertical"
     android:updatePeriodMillis="0"
-    android:widgetCategory="home_screen"></appwidget-provider>
+    android:widgetCategory="home_screen"/>
