--- a/app/src/main/res/layout/stock_app_widget.xml
+++ b/app/src/main/res/layout/stock_app_widget.xml
@@ -5,7 +5,19 @@
     android:padding="@dimen/widget_margin"
     android:orientation="vertical"
     android:background="@color/colorWhite">
-
+    <FrameLayout
+        android:id="@+id/widget"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/abc_action_bar_default_height_material"
+        android:background="@color/colorPrimary">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:contentDescription="@string/app_name"
+            android:layout_gravity="center"
+            android:text="@string/stockhawk_widget_bar_string"
+            />
+    </FrameLayout>
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
