added a preview image for the widget

--- a/app/src/main/res/xml/stock_app_widget_info.xml
+++ b/app/src/main/res/xml/stock_app_widget_info.xml
@@ -5,6 +5,7 @@
     android:minHeight="@dimen/widget_detail_default_height"
     android:minResizeWidth="@dimen/widget_detail_min_resize_width"
     android:minWidth="@dimen/widget_detail_default_width"
+    android:previewImage="@drawable/widgetpreview"
     android:resizeMode="horizontal|vertical"
     android:updatePeriodMillis="0"
     android:widgetCategory="home_screen"/>
