--- a/app/src/main/res/layout/stock_app_widget.xml
+++ b/app/src/main/res/layout/stock_app_widget.xml
@@ -21,13 +21,16 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:layout_gravity="end">
         <ListView
             android:id="@+id/widget_list_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:divider="@null"
             android:dividerHeight="0dp"
+            android:paddingStart="@dimen/widget_activity_horizontal_margin"
+            android:paddingEnd="@dimen/widget_activity_vertical_margin"
             tools:listitem="@layout/list_item_quote"/>
         <TextView
             android:id="@+id/widget_empty"
