--- a/app/src/main/res/layout/detail_layout.xml
+++ b/app/src/main/res/layout/detail_layout.xml
@@ -14,10 +14,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:layout_margin="8dp"
-        android:layout_toLeftOf="@+id/tvYMax"
-        android:layout_marginRight="5dp"
+        android:layout_toStartOf="@+id/tvYMax"
+        android:layout_marginEnd="5dp"
         android:max="200"
         android:paddingBottom="12dp" />
 
@@ -28,8 +28,8 @@
         android:layout_above="@+id/seekBar2"
         android:layout_margin="8dp"
         android:layout_marginBottom="35dp"
-        android:layout_toLeftOf="@+id/tvXMax"
-        android:layout_marginRight="5dp"
+        android:layout_toStartOf="@+id/tvXMax"
+        android:layout_marginEnd="5dp"
         android:max="1500"
         android:paddingBottom="12dp" />
 
@@ -39,11 +39,11 @@
         android:layout_width="50dp"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/seekBar1"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:text="500"
         android:layout_marginBottom="15dp"
-        android:layout_marginRight="10dp"
-        android:gravity="right"
+        android:layout_marginEnd="10dp"
+        android:gravity="end"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
@@ -51,11 +51,11 @@
         android:layout_width="50dp"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/seekBar2"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:text="500"
         android:layout_marginBottom="15dp"
-        android:layout_marginRight="10dp"
-        android:gravity="right"
+        android:layout_marginEnd="10dp"
+        android:gravity="end"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
 </RelativeLayout>
