--- a/app/src/main/res/layout/detail_layout.xml
+++ b/app/src/main/res/layout/detail_layout.xml
@@ -40,7 +40,7 @@
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/seekBar1"
         android:layout_alignParentEnd="true"
-        android:text="500"
+        android:text="@string/seekbar_text"
         android:layout_marginBottom="15dp"
         android:layout_marginEnd="10dp"
         android:gravity="end"
@@ -52,7 +52,7 @@
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/seekBar2"
         android:layout_alignParentEnd="true"
-        android:text="500"
+        android:text="@string/seekbar_text"
         android:layout_marginBottom="15dp"
         android:layout_marginEnd="10dp"
         android:gravity="end"
